--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,14 +3,9 @@
 - title: About
   url: /about/
 
-- title: Articles
-  url: /articles/
+- title: Projects
+  url: /projects/
 
 - title: Blog
   url: /blog/
 
-- title: Theme Setup
-  url: /theme-setup/
-
-- title: Made Mistakes
-  url: http://mademistakes.com
