--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: en_US
 description: Sarah Ing's Blog
 logo: edited.jpg
 search: true
-url: sarahikeda.github.io
+url: 
 
 
 # Jekyll configuration
