add jekyll update

--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 
 title: Sarah Ing
 locale: en_US
-description: Sarah Ing's Blog
+description:
 logo: edited.jpg
 search: true
-url: 
+url:
 
 
 # Jekyll configuration
