--- a/dreamswim/_config.yml
+++ b/dreamswim/_config.yml
@@ -2,10 +2,10 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
+url: http://sarahikeda.github.io/dreamswim
 title: DreamSwim
 email: your-email@domain.com
-author: Your Name
+author: H2oh
 description: > # "Write an awesome description for your new site here.
   You can edit this line in _config.yml. It will appear in your document
   head meta (for Google search results) and in your feed.xml site
